[metadata]
license_file = LICENSE

[flake8]
# E501: Line too long
ignore = E501,W503
per-file-ignores =
	# Re-export modules and star imports for public API
	ls/joyous/models/__init__.py:F401
	ls/joyous/formats/__init__.py:F401
	ls/joyous/models/events.py:F401,F403
	ls/joyous/tests/formats/en_NZ/formats.py:F401,F403
	# Known imports placed after Django settings initialisation
	ls/joyous/tests/test_pages.py:E402
	ls/joyous/formats/ical.py:E402
